internal/provider/file/testdata/resources.2.yaml
backends:
- kind: Backend
  apiVersion: gateway.envoyproxy.io/v1alpha1
  metadata:
    creationTimestamp: null
    name: backend-2
    namespace: envoy-gateway-system
  spec:
    type: Endpoints
    endpoints:
    - ip:
        address: 0.0.0.0
        port: 3002
  status: {}
gatewayClass:
  kind: GatewayClass
  apiVersion: gateway.networking.k8s.io/v1
  metadata:
    creationTimestamp: null
    name: eg-2
    finalizers:
    - gateway-exists-finalizer.gateway.networking.k8s.io
  spec:
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
  status:
    conditions:
    - type: Accepted
      status: "True"
      reason: Accepted
      Message: Valid GatewayClass
gateways:
- kind: Gateway
  apiVersion: gateway.networking.k8s.io/v1
  metadata:
    creationTimestamp: null
    name: eg-2
    namespace: envoy-gateway-system
  spec:
    gatewayClassName: eg-2
    listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 8802
      protocol: HTTP
  status: {}
httpRoutes:
- kind: HTTPRoute
  apiVersion: gateway.networking.k8s.io/v1
  metadata:
    creationTimestamp: null
    name: backend-2
    namespace: envoy-gateway-system
  spec:
    hostnames:
    - www.test2.com
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg-2
    rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-2
        weight: 1
      matches:
      - path:
          type: PathPrefix
          value: /
  status:
    parents: null
namespaces:
- kind: Namespace
  apiVersion: v1
  metadata:
    creationTimestamp: null
    name: envoy-gateway-system
  spec: {}
  status: {}
