internal/provider/file/testdata/resources.all.yaml
backends:
- kind: Backend
  metadata:
    creationTimestamp: null
    name: backend
    namespace: envoy-gateway-system
  spec:
    endpoints:
    - ip:
        address: 0.0.0.0
        port: 3000
  status: {}
gatewayClass:
  kind: GatewayClass
  metadata:
    creationTimestamp: null
    name: eg
    namespace: envoy-gateway-system
  spec:
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
  status: {}
gateways:
- kind: Gateway
  metadata:
    creationTimestamp: null
    name: eg
    namespace: envoy-gateway-system
  spec:
    gatewayClassName: eg
    listeners:
    - name: http
      port: 8888
      protocol: HTTP
  status: {}
httpRoutes:
- kind: HTTPRoute
  metadata:
    creationTimestamp: null
    name: backend
    namespace: envoy-gateway-system
  spec:
    hostnames:
    - www.example.com
    parentRefs:
    - name: eg
    rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend
      matches:
      - path:
          type: PathPrefix
          value: /
  status:
    parents: null
namespaces:
- metadata:
    creationTimestamp: null
    name: envoy-gateway-system
  spec: {}
  status: {}
